# lets-get-rusty

shuttle/hello-shuttle/: Cargo.toml
shuttle/hello-shuttle/src/: main.rs
shuttle/podcast-app/: Cargo.toml
shuttle/podcast-app/src/: main.rs
